--- a/ara-test/pom.xml
+++ b/ara-test/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>guice-multibindings</artifactId>
             <version>3.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -74,7 +79,7 @@
                 <executions>
                     <execution>
                         <id>attach-sources</id>
-                        <project>verify</project>
+                        <phase>verify</phase>
                         <goals>
                             <goal>jar</goal>
                         </goals>
