--- a/android-test/AndroidManifest.xml
+++ b/android-test/AndroidManifest.xml
@@ -3,15 +3,29 @@
           package="com.example.android_test"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="4"/>
+    <uses-sdk android:minSdkVersion="8"/>
     <application android:label="@string/app_name"
                  android:icon="@drawable/ic_launcher">
-        <activity android:name=".activity.GravityCircleActivity"
+        <activity android:name=".activity.SQLiteActivity"
+                android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".activity.MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.GravityCircleActivity"
+                  android:label="@string/app_name">
+            <!--<intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>-->
         </activity>
         <activity android:name=".activity.RockerCircleActivity"
                   android:label="@string/app_name">
